Fixed id extraction from MongoDB. Before by throwing cant id autogeneration exception

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,9 +25,9 @@
 					<th>Autor</th>
 				</tr>
 				<tr ng-repeat="row in libros">
-					<td><span ng-model="row.id"></span></td>
-					<td><span ng-model="row.titulo"></span></td>
-					<td><span ng-model="row.autor"></span></td>
+					<td>"{{row.id}}"</td>
+					<td>"{{row.titulo}}"</td>
+					<td>"{{row.autor}}"</td>
 				</tr>
 			</table>
 			<div class="alert alert-info">
